apps/manifests/geocentric-model/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geocentric-model-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: geocentric-model
  type: ClusterIP
