apps/manifests/geocentric-model/geocentric-model-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: geocentric-model-ingress
  namespace: geocentric
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`geocentric.local.cluster`)
      kind: Rule
      services:
        - name: geocentric-model-svc
          port: 80
